[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player/Player_1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Crosshair/crosshair-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/batmans_grapple_gun/Grapple_gun.tres" type="ArrayMesh" id=3]
[ext_resource path="res://Player/Hand.gd" type="Script" id=5]
[ext_resource path="res://Player/Guns/Grappling_gun.gd" type="Script" id=6]

[sub_resource type="CapsuleShape" id=2]
radius = 0.5
height = 2.0

[sub_resource type="CapsuleMesh" id=17]
radius = 0.5
mid_height = 2.0

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Cross_hair_aim",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Cross_hair_aimed",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Cross_hair_merge",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Cross_hair_regular",
"speed": 5.0
} ]

[sub_resource type="SphereShape" id=16]
radius = 3.24868

[sub_resource type="BoxShape" id=20]
extents = Vector3( 6.68637, 6.64651, 6.74803 )

[sub_resource type="SphereShape" id=21]
radius = 3.24868

[node name="Player_1" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
mesh = SubResource( 17 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.47027, -0.288814 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048573
current = true
far = 1000.0

[node name="Control" type="Control" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Head/Camera/Control"]
margin_left = 836.0
margin_top = 436.0
margin_right = 900.0
margin_bottom = 500.0
rect_scale = Vector2( 2, 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Head/Camera/Control/TextureRect"]
frames = SubResource( 15 )
animation = "Cross_hair_regular"
centered = false

[node name="ProgressBar" type="ProgressBar" parent="Head/Camera/Control"]
margin_right = 619.0
margin_bottom = 45.0
max_value = 3000.0
value = 100.0

[node name="RayCast" type="RayCast" parent="Head/Camera"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, -10000 )
collision_mask = 2

[node name="Hand" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.211, -0.0462277, -0.494905 )
script = ExtResource( 5 )
sway_left = Vector3( 0, 0.1, 0 )
sway_right = Vector3( 0, -0.1, 0 )
sway_up = Vector3( -0.1, 0, 0 )
sway_down = Vector3( 0.1, 0, 0 )

[node name="Grappling_gun" type="Spatial" parent="Head/Camera/Hand"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, -0.14, 0 )
script = ExtResource( 6 )

[node name="Hook" type="MeshInstance" parent="Head/Camera/Hand/Grappling_gun"]
transform = Transform( -0.1, 0, -8.74228e-09, 0, 0.1, 0, 8.74228e-09, 0, -0.1, 0, -0.702251, 0.983702 )
layers = 2
mesh = ExtResource( 3 )

[node name="Rope_position" type="Position3D" parent="Head/Camera/Hand/Grappling_gun/Hook"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.75915e-06, 7.05432, 20.1223 )

[node name="StaticBody3" type="StaticBody" parent="Head/Camera/Hand/Grappling_gun/Hook/Rope_position"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/Hand/Grappling_gun/Hook/Rope_position/StaticBody3"]
shape = SubResource( 16 )

[node name="Grapple_timer" type="Timer" parent="Head/Camera/Hand/Grappling_gun"]
wait_time = 18.0
one_shot = true

[node name="Grapple_point" type="Position3D" parent="Head/Camera/Hand/Grappling_gun"]
transform = Transform( 0.1, 0, -7.40149e-16, 0, 0.1, 0, 7.40149e-16, 0, 0.1, 9.4739e-14, 0, -10 )

[node name="StaticBody" type="StaticBody" parent="Head/Camera/Hand/Grappling_gun/Grapple_point"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/Hand/Grappling_gun/Grapple_point/StaticBody"]
shape = SubResource( 20 )

[node name="Hand_cont_left" type="Position3D" parent="Head/Camera/Hand/Grappling_gun"]

[node name="Look_point" type="Position3D" parent="Head/Camera/Hand"]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, -0.139667, -3.00181 )

[node name="StaticBody2" type="StaticBody" parent="Head/Camera/Hand/Look_point"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/Hand/Look_point/StaticBody2"]
shape = SubResource( 21 )

[node name="ViewportContainer" type="ViewportContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Head/Camera/ViewportContainer"]
size = Vector2( 1800, 1000 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Gun_cam" type="Camera" parent="Head/Camera/ViewportContainer/Viewport"]
cull_mask = 2

[node name="Arms" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, 0, -0.401868, -0.663511 )

[node name="GroundCheck" type="RayCast" parent="."]
enabled = true
exclude_parent = false
debug_shape_custom_color = Color( 1, 0, 0, 1 )

[node name="Head_bonker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72253, 0 )
enabled = true
cast_to = Vector3( 0, 1.5, 0 )

[node name="Wall_run_timer" type="Timer" parent="."]

[node name="Grapple_timer" type="Timer" parent="."]

[connection signal="timeout" from="Head/Camera/Hand/Grappling_gun/Grapple_timer" to="Head/Camera/Hand/Grappling_gun" method="_on_Grapple_timer_timeout"]
